# mercadolab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo_03_scheduler_loop.py  demo_adaptive_market.py  demo_basic_market.py  demo_fii_market.py  metricas_simulacao_anual.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_scheduler_tick.py
examples/: basic_quickstart.py  prices_example.csv  run_feedback.py  run_feedback_imbalance.py  run_parallel.py  run_parallel_fixed.py  run_parallel_from_csv.py
src/mercadolab/: __init__.py  cli.py
src/mercadolab/api/: __init__.py  ativo.py  carteira.py  dinheiro.py  enums.py  investidor.py  livro_de_ofertas.py  mercado.py  ordem.py  posicao.py  simulacao.py  tempo.py  transacao.py
src/mercadolab/core/: datasets.py  events.py  investidor.py  market.py  orderbook.py  simulation.py  world.py
src/mercadolab/internal/: market.py
src/mercadolab/internal/engine/: __init__.py  executors.py  match_engine.py  scheduler.py
src/mercadolab/investidores/: drl.py  fundamentalista.py  ruido.py  tecnico.py
src/mercadolab/mercados/: environments.py
src/mercadolab/plugins/: __init__.py  random_trader.py
src/mercadolab/scenarios/: __init__.py  adaptive_market.py  basic_market.py  exemplo_coleta_metricas.py  exemplo_graficos_metricas.py  exemplo_minimo_fii.py  exemplo_simulacao_anual.py  fii_market.py
src/mercadolab/tests/: test_ativo.py  test_carteira.py  test_livro_de_ofertas.py  test_mercado.py  test_ordem.py  test_simulacao.py
src/mercadolab/utils/: io.py  plotting.py  seeding.py
src/mercadolab/validations/: facts.py  recurrence.py
src/test/: test_bench_decide_only.py  test_bench_decidir.py  test_dinheiro.py  test_feedback_excess.py  test_public_api.py  test_scheduler_cash.py  test_scheduler_mercado_fallback.py  test_scheduler_param.py  test_scheduler_smoke.py  test_transacao.py
test/: test_adaptive_market.py  test_dinheiro.py  test_feedback_excess.py  test_public_api.py  test_scheduler_cash.py  test_scheduler_mercado_fallback.py  test_transacao.py
tests/: test_basic.py
