[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mercadolab"
version = "0.2.0"
description = "Framework ABM para simulações de investimentos no mercado financeiro (UML-surface)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Raphael Mauricio Sanches de Jesus", email = "raphael.mauricio@gmail.com" },
]
keywords = ["abm", "agent-based", "market", "finance", "simulation", "framework"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pandas-stubs>=2.2.0.240909",
  "types-PyYAML>=6.0.12"
]
ml = ["torch>=2.2", "gymnasium>=0.29", "stable-baselines3>=2.3"]

[project.urls]
Homepage = "https://github.com/Hargenx/mercadolab"
Issues = "https://github.com/Hargenx/mercadolab/issues"

[project.scripts]
mercadolab = "mercadolab.cli:main"
mlab = "mercadolab.cli:main"

# Plugins (entry points públicos)
[project.entry-points."mercadolab.plugins"]
investidor_fundamentalista = "mercadolab.plugins.investidor_fundamentalista:Factory"
investidor_tendencia      = "mercadolab.plugins.investidor_tendencia:Factory"
investidor_ruido          = "mercadolab.plugins.investidor_ruido:Factory"
mercado_simples           = "mercadolab.plugins.mercado_simples:Factory"
random-trader             = "mercadolab.plugins.random_trader:RandomTrader"

# ---------- Hatch (src layout) ----------
[tool.hatch.build.targets.wheel]
packages = ["src/mercadolab"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mercadolab/**",
  "README.md",
  "LICENSE*",
  "docs/**",
  "tests/**"
]

# ---------- Lint / typecheck / tests ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["mercadolab"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
