[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mercadolab"
version = "0.2.0"
description = "Framework em Python para criação de cenários de mercados artificiais baseados em agentes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Raphael Mauricio Sanches de Jesus", email = "raphael.mauricio@gmail.com" },
]
keywords = [
  "abm",
  "agent-based modeling",
  "artificial markets",
  "market simulation",
  "computational economics",
  "framework"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
data = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "statsmodels>=0.14"
]
config = ["pyyaml>=6.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pandas-stubs>=2.2.0.240909",
  "types-PyYAML>=6.0.12"
]
ml = ["torch>=2.2", "gymnasium>=0.29", "stable-baselines3>=2.3"]

[project.urls]
Homepage = "https://github.com/Hargenx/mercadolab"
Issues = "https://github.com/Hargenx/mercadolab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mercadolab"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mercadolab/**",
  "README.md",
  "LICENSE*",
  "docs/**",
  "tests/**"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["mercadolab"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]